[gd_scene load_steps=4 format=2]

[ext_resource path="res://Reused/Resources/Icons/Input/Xbox/button_0.png" type="Texture" id=1]
[ext_resource path="res://Nodes/Pawn/Actor/Actions/Jump/Icon.png" type="Texture" id=2]
[ext_resource path="res://Nodes/PlayerNode/HUD/Actions/Action.gd" type="Script" id=3]

[node name="Action" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -203.0
margin_top = -40.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 3 )

[node name="_Background" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_right = 7.0
margin_bottom = -2.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
margin_right = 91.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
percent_visible = false

[node name="ButtonIcon" type="TextureRect" parent="HBoxContainer"]
margin_left = 95.0
margin_right = 125.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ButtonTextContainer" type="PanelContainer" parent="HBoxContainer"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )

[node name="ButtonText" type="Label" parent="HBoxContainer/ButtonTextContainer"]
margin_left = 8.0
margin_top = 1.0
margin_right = 22.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A"
align = 1
valign = 1

[node name="ActionIcon" type="TextureRect" parent="HBoxContainer"]
margin_left = 163.0
margin_right = 193.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
